--- a/frontend.yml
+++ b/frontend.yml
@@ -1,6 +1,6 @@
 - name: Frontend Setup
   hosts: all
-  become: true
+  become: yes
   tasks:
     - name: Install Nginx
       ansible.builtin.dnf:
