--- a/frontend.yml
+++ b/frontend.yml
@@ -6,3 +6,8 @@
       ansible.builtin.dnf:
         name: nginx
         state: latest
+
+    - name: Start Nginx
+      ansible.builtin.systemd_service:
+        state: started
+        name: nginx
